# shared_control

./: LICENSE  README.md
adaptive_node/: CMakeLists.txt  package.xml
adaptive_node/launch/: adaptive.launch
adaptive_node/src/: adaptive_alpha_node.py
delay_node/: CMakeLists.txt  package.xml
delay_node/src/: delay_node.py
fuzzy_mi_controller/experiments_launch/: CMakeLists.txt  package.xml
fuzzy_mi_controller/experiments_launch/launch/: husky_gazebo_mi_experiment.launch  husky_gazebo_mi_training.launch
fuzzy_mi_controller/status_publisher/src/: status_publisher.cpp  status_sound_publisher_node.cpp
fuzzy_mi_controller/variable_autonomy/: CMakeLists.txt
fuzzy_mi_controller_shared/experiments_launch/launch/: husky_gazebo_mi_experiment.launch
loa_vfh/: CMakeLists.txt  package.xml
loa_vfh/launch/: vfh_node.launch
loa_vfh/src/: vfh_node.cpp
shared_control_node/: CMakeLists.txt  package.xml
shared_control_node/src/: shared_control_node.cpp
