<?xml version="1.0"?>
<package format="2">
  <name>shared_control_node</name>
  <version>0.1.0</version>
  <description>The shared_control_node package</description>

  <maintainer email="pantelpapp@gmail.com">pantelis</maintainer>



  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>


  <export>
  </export>
</package>
